--- a/style.css
+++ b/style.css
@@ -10,16 +10,35 @@
     font-weight: 700;
     margin-left: 30px;
 }
-.carousel-indicators li{
-    background-color: orange;
+.carousel{
+    margin-top:-100px;
 }
+.carousel-indicators li{
+    background-color: gray;
+    width: 15px;
+    height: 10px;
+    margin: 5px;
+    border: none;
+    border-radius: 10px;
+}
+
+.carousel-indicators .active{
+    width: 40px;
+    height: 10px;
+    background-image: linear-gradient(30deg, orange, #f1c54b);
+}
+
+.carousel-indicators{
+    margin-bottom: -20px;
+}
+
 .buy-now-btn{
     background-color: black;
     border: none;
     border-radius: 5px;
     color: white;
     padding: 8px 15px;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: 700;
 }
 
@@ -60,10 +79,10 @@
     margin-bottom: 50px;
 }
 
-.categories p{
-    color: orange;
-    font-size: 100px;
-    font-weight: bolder;
-    margin-top: -120px;
+.cat-underline{
+    margin: 0 auto;
+    width: 80px;
+    height: 6px;
+    background-image: linear-gradient(30deg, #f1c54b, orange);
     border-radius: 100px;
 }
