--- a/style.css
+++ b/style.css
@@ -86,3 +86,19 @@
     background-image: linear-gradient(30deg, #f1c54b, orange);
     border-radius: 100px;
 }
+
+
+@media (max-width: 576px){
+    nav li{
+        text-align: center;
+    }
+    .carousel{
+        margin-top: 0;
+    }
+    .col-md-3{
+        margin-bottom: 45px;
+    }
+    .cat{
+        margin: 0 auto;
+    }
+}
